Fixed Drag & Drop of URL's

Now you can D&D images from Firefox, from Dolphin and there is no crash! =)
Tested the following usecases:

1) Add as layer (local and remote files)
2) Add new Document (local and remote files)
3) Replace Document (local and remote files)

4) Add Multiple Layers (local)
5) Add Multiple Documents (local)

BUG:318560