krita/ui/kis_view2.cpp
@@ -543,7 +543,7 @@ void KisView2::dropEvent(QDropEvent *event)
             QAction *cancel = new KAction(i18n("Cancel"), &popup);
 
             if (urls.count() == 1) {
-                if (!image().isNull()) {
+                if (image()) {
                     popup.addAction(insertAsNewLayer);
                 }
                 popup.addAction(openInNewDocument);
@@ -570,10 +570,17 @@ void KisView2::dropEvent(QDropEvent *event)
                         if (m_d->part->isModified()) {
                             m_d->part->save();
                         }
+
+                        bool result = false;
                         if (shell() != 0) {
+                            /**
+                             * NOTE: this is effectively deferred self-destruction
+                             */
+                            connect(shell(), SIGNAL(loadCompleted()),
+                                    shell(), SLOT(close()));
+
                             shell()->openDocument(url);
                         }
-                        shell()->close();
                     } else {
                         Q_ASSERT(action == openInNewDocument || action == openInNewDocuments);
 
@@ -585,8 +592,6 @@ void KisView2::dropEvent(QDropEvent *event)
             }
         }
     }
-    qApp->setActiveWindow(shell());
-    activateWindow();
 }
 
 KoZoomController *KisView2::zoomController() const
